--- a/package.json
+++ b/package.json
@@ -13,13 +13,16 @@
   "license": "ISC",
   "dependencies": {
     "babel-polyfill": "^6.16.0",
+    "bootstrap": "^3.3.7",
+    "jquery": "^3.1.1",
     "react": "^15.3.2",
     "react-dom": "^15.3.2",
     "react-redux": "^4.4.6",
     "react-router": "^3.0.0",
     "react-router-redux": "^4.0.7",
     "redux": "^3.6.0",
-    "redux-thunk": "^2.1.0"
+    "redux-thunk": "^2.1.0",
+    "toastr": "^2.1.2"
   },
   "devDependencies": {
     "babel-core": "^6.18.0",
@@ -27,8 +30,12 @@
     "babel-preset-es2015": "^6.18.0",
     "babel-preset-react": "^6.16.0",
     "babel-preset-stage-2": "^6.18.0",
+    "css-loader": "^0.26.0",
+    "postcss": "^5.2.6",
+    "postcss-loader": "^1.1.1",
+    "redux-immutable-state-invariant": "^1.2.4",
+    "style-loader": "^0.13.1",
     "webpack": "^1.13.3",
-    "webpack-dev-server": "^1.16.2",
-    "redux-immutable-state-invariant": "^1.2.4"
+    "webpack-dev-server": "^1.16.2"
   }
 }
